CMAKE_MINIMUM_REQUIRED(VERSION 2.8.12)

SET(CMAKE_CXX_FLAGS  "${CMAKE_CXX_FLAGS} -std=c++11 -g")

PROJECT(pb2json)

SET(protobuf_DIR "${CMAKE_CURRENT_SOURCE_DIR}/3rdparty/lib64/cmake/protobuf/")
INCLUDE_DIRECTORIES(${CMAKE_CURRENT_SOURCE_DIR}/3rdparty/include)
LINK_DIRECTORIES(${CMAKE_CURRENT_SOURCE_DIR}/3rdparty/lib64 ${CMAKE_CURRENT_SOURCE_DIR}/3rdparty/lib)

FIND_PACKAGE(protobuf CONFIG REQUIRED)

IF(protobuf_VERBOSE)
	MESSAGE(STATUS "Using protobuf ${protobuf_VERBOSE}")
ENDIF()

ADD_SUBDIRECTORY(proto)

ADD_EXECUTABLE(test person.cc)
TARGET_LINK_LIBRARIES(test PUBLIC json2pb)

