SET(CMAKE_INLUCDE_CURRENT_DIR TRUE)

FILE(GLOB PROTOS *.proto)
SET(SRC json2pb.cc json2pb.h)

SET(EXCUTABLE_NAME json2pb)
ADD_LIBRARY(${EXCUTABLE_NAME} STATIC ${SRC} ${PROTOS})    #  PROTOBUF_GENERATE 会去查找ADD_EXECUTABLE传入的文件是否是proto结尾

TARGET_INCLUDE_DIRECTORIES(${EXCUTABLE_NAME} PUBLIC ${CMAKE_CURRENT_BINARY_DIR})
TARGET_LINK_LIBRARIES(${EXCUTABLE_NAME} protobuf::libprotobuf jsoncpp)
PROTOBUF_GENERATE(TARGET ${EXCUTABLE_NAME})